--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'APPMAKERS King Of Anti Viruses'
 description: 'A simpe but easy anti virus'
 author: 'AppMakers Team'
-icon: 'check-circle'
+Icon: check-circle
 color: 'purple'
 inputs:
   repo-token:
